	near one.  E.g. pchisq(80, 4, ncp=1, log.p=TRUE).  (Maybe what
	was meant in PR#14126.)
	
    o	maintainer() has been added, to give convenient access to the
	name of the maintainer of a package (contributed by David
	Scott).

    o	sample() and sample.int() allow zero items to be sampled from
	a zero-length input.  sample.int() gains a default value
	'size=n' to be more similar to sample().


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.

    o	Use of multiple arguments to return() is now defunct.


INSTALLATION

    o	UTF-8 is now used for the reference manual and package
	manuals.  This requires LaTeX '2005/12/01' or later.


PACKAGE INSTALLATION

    o	Characters in R source which are not translatable to the
	current locale are now handled more tolerantly:  these will be
	converted to hex codes with a warning.  Such characters are
	only really portable if they appear in comments.

    o	R CMD INSTALL now tests that the installed package can be loaded
	(and backs out the installation if it cannot): this can be
	suppressed by --no-test-load.  This avoids installing/updating
	a package that cannot be used: common causes of failures to
	load are missing/incompatible external software and
	missing/broken dependent packages.

    o	Package installation on Windows for a package with a src
	directory now checks if a DLL is created unless there is a
	src/Makefile.win file: this helps catch broken installations
	where the toolchain has not reported problems in building the DLL.
	(Note: this can be any DLL, not just one named <pkg-name>.dll.)


BUG FIXES
