@@ -127,6 +127,7 @@ assign("seq_len", function(length.out) NULL, envir = .ArgsEnv)
 assign("standardGeneric", function(f) NULL, envir = .ArgsEnv)
 assign("storage.mode<-", function(x, value) NULL, envir = .ArgsEnv)
 assign("substitute", function(expr, env) NULL, envir = .ArgsEnv)
+assign("switch", function(EXPR, ...) NULL, envir = .ArgsEnv)
 assign("tracemem", function(x) NULL, envir = .ArgsEnv)
 assign("unclass", function(x) NULL, envir = .ArgsEnv)
 assign("untracemem", function(x) NULL, envir = .ArgsEnv)
